Add endpoint getUser
